# TokenEyes

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  pyproject.toml  test_models.py  wrangler.jsonc
.github/workflows/: deploy-cloudflare-pages.yml
cloudflare/: DEPLOY.md  _headers  _redirects  _worker.js  index.html
cloudflare/functions/: advisor.js  country.js  proxy.js
tokeneyes/: __init__.py  cli.py  currency.py  display.py  pricing.py  vision.py  web_runner.py
web/: app.py
web/static/: index.html
